Coverity analysis defect 121147: Parse warning

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.2.0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • Sharding EMEA 2021-11-29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Parse warning

      A parse warning may reduce maintainability of the code, or it may indicate a serious error. A parse warning from the Coverity parser may indicate a bug, or poor coding practice
      /src/mongo/db/s/balancer/balancer_commands_scheduler_impl.h:469: PW.USELESS_TYPE_QUALIFIER_ON_RETURN_TYPE 121147 type qualifier on return type is meaningless

            Assignee:
            Paolo Polato
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: