SERVER-61468 fix coverity warning